--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
     name: Build
     uses: ./.github/workflows/build.yml
   deploy:
+    environment:
+      name: github-pages
     name: Deploy
     runs-on: ubuntu-latest
     needs: build
